--- a/src/EasyRoom/AppBundle/Resources/views/Salle/form_recherche.html.twig
+++ b/src/EasyRoom/AppBundle/Resources/views/Salle/form_recherche.html.twig
@@ -2,27 +2,24 @@
   <div class="row">
     <h3>Réservez une salle</h3>
     <div class="input-field col m2">
-      <input id="nom_salle" type="text" class="validate">
-      <label for="nom_salle">Nom salle</label>
-    </div>
-    <div class="input-field col m2">
       <input id="effectif" type="number" class="validate">
       <label for="effectif">Effectif</label>
     </div>
     <div class="input-field col m3">
-      <input id="debut" type="date" class="datepicker">
-      <label for="debut">Début</label>
-    </div>
-    <div class="input-field col m3">
-      <input id="fin" type="date" class="datepicker">
-      <label for="fin">Fin</label>
+      <input id="date_debut" type="date" class="datepicker">
+      <label for="date_debut">Date début</label>
     </div>
     <div class="input-field col m2">
-      <select>
-        <option value="1">Heures</option>
-        <option value="2">Jours</option>
-      </select>
-      <label>Durée</label>
+      <input id="heure_debut" type="time" class="timepicker">
+      <label for="heure_debut">Heure début</label>
+    </div>
+    <div class="input-field col m3">
+      <input id="date_fin" type="date" class="datepicker">
+      <label for="date_fin">Date fin</label>
+    </div>
+    <div class="input-field col m2">
+      <input id="heure_fin" type="time" class="timepicker">
+      <label for="heure_fin">Heure fin</label>
     </div>
     <div class="submit col s12 center-align">
       <button class="btn waves-effect waves-light" type="submit" name="action">Rechercher</button>
