--- a/src/EasyRoom/AppBundle/Resources/views/Login/index.html.twig
+++ b/src/EasyRoom/AppBundle/Resources/views/Login/index.html.twig
@@ -14,7 +14,7 @@ and open the template in the editor.
     <!--Import materialize.css-->
 
     <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
+    <link rel="stylesheet" href="{{ asset('bundles/easyroomapp/dist/css/materialize.min.css') }}">
     <link type="text/css" rel="stylesheet" href="{{ asset('bundles/easyroomapp/dist/css/style.css') }}"  media="screen,projection"/>
     <link type="text/css" rel="stylesheet" href="{{ asset('bundles/easyroomapp/dist/css/login.css') }}"  media="screen,projection"/>
 </head>
@@ -49,10 +49,10 @@ and open the template in the editor.
         © Copyright ECN Team 2017
     </p>
 </footer>
-<!--Import jQuery before materialize.js-->
-<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-<!-- Compiled and minified JavaScript -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
+    <!--Import jQuery before materialize.js-->
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <!-- Compiled and minified JavaScript -->
+    <script src="{{ asset('bundles/easyroomapp/dist/js/materialize.min.js') }}"></script>
 {% block javascript %}{% endblock %}
 </body>
 </html>
