--- a/src/EasyRoom/AppBundle/Resources/views/Reservation/carte_ma_reservation.html.twig
+++ b/src/EasyRoom/AppBundle/Resources/views/Reservation/carte_ma_reservation.html.twig
@@ -3,88 +3,8 @@
     <div class="card-stacked">
       <div class="card-content row">
         <div class="card-description col s6">
-          <h4>Salle hipster</h4>
-          <p>I am a very simple card. I am good at containing small bits of information.</p>
-          <p class="bottom"><i class="material-icons">date_range</i>20/04/2017 15:30</p>
-        </div>
-        <div class="col s6 card-image">
-          <img src="{{ asset('bundles/easyroomapp/dist/images/card_salle_hipster.jpg') }}">
-        </div>
-      </div>
-      <div class="card-action right-align">
-        <a href="#">Supprimer</a>
-        <a href="#">Modifier</a>
-      </div>
-    </div>
-  </div>
-</div>
-<div class="col s12 l4">
-  <div class="card horizontal">
-    <div class="card-stacked">
-      <div class="card-content row">
-        <div class="card-description col s6">
-          <h4>Salle hipster</h4>
-          <p>I am a very simple card. I am good at containing small bits of information.</p>
-          <p class="bottom"><i class="material-icons">date_range</i>20/04/2017 15:30</p>
-        </div>
-        <div class="col s6 card-image">
-          <img src="{{ asset('bundles/easyroomapp/dist/images/card_salle_hipster.jpg') }}">
-        </div>
-      </div>
-      <div class="card-action right-align">
-        <a href="#">Supprimer</a>
-        <a href="#">Modifier</a>
-      </div>
-    </div>
-  </div>
-</div>
-<div class="col s12 l4">
-  <div class="card horizontal">
-    <div class="card-stacked">
-      <div class="card-content row">
-        <div class="card-description col s6">
-          <h4>Salle hipster</h4>
-          <p>I am a very simple card. I am good at containing small bits of information.</p>
-          <p class="bottom"><i class="material-icons">date_range</i>20/04/2017 15:30</p>
-        </div>
-        <div class="col s6 card-image">
-          <img src="{{ asset('bundles/easyroomapp/dist/images/card_salle_hipster.jpg') }}">
-        </div>
-      </div>
-      <div class="card-action right-align">
-        <a href="#">Supprimer</a>
-        <a href="#">Modifier</a>
-      </div>
-    </div>
-  </div>
-</div>
-<div class="col s12 l4">
-  <div class="card horizontal">
-    <div class="card-stacked">
-      <div class="card-content row">
-        <div class="card-description col s6">
-          <h4>Salle hipster</h4>
-          <p>I am a very simple card. I am good at containing small bits of information.</p>
-          <p class="bottom"><i class="material-icons">date_range</i>20/04/2017 15:30</p>
-        </div>
-        <div class="col s6 card-image">
-          <img src="{{ asset('bundles/easyroomapp/dist/images/card_salle_hipster.jpg') }}">
-        </div>
-      </div>
-      <div class="card-action right-align">
-        <a href="#">Supprimer</a>
-        <a href="#">Modifier</a>
-      </div>
-    </div>
-  </div>
-</div>
-<div class="col s12 l4">
-  <div class="card horizontal">
-    <div class="card-stacked">
-      <div class="card-content row">
-        <div class="card-description col s6">
-          <h4>Salle hipster</h4>
-          <p>I am a very simple card. I am good at containing small bits of information.</p>
+          <h4>{{ reservation.salle.libelle }}</h4>
+          <p>{{ reservation.salle.description[:70]~'...' }}</p>
           <p class="bottom"><i class="material-icons">date_range</i>20/04/2017 15:30</p>
         </div>
         <div class="col s6 card-image">
