Ajout de l'heure

--- a/src/EasyRoom/AppBundle/Resources/views/Login/index.html.twig
+++ b/src/EasyRoom/AppBundle/Resources/views/Login/index.html.twig
@@ -50,7 +50,7 @@ and open the template in the editor.
     </p>
 </footer>
     <!--Import jQuery before materialize.js-->
-    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script type="text/javascript" src="{{ asset('bundles/easyroomapp/dist/js/jquery-3.1.1.min.js') }}"></script>
     <!-- Compiled and minified JavaScript -->
     <script src="{{ asset('bundles/easyroomapp/dist/js/materialize.min.js') }}"></script>
 {% block javascript %}{% endblock %}
