--- a/src/EasyRoom/AppBundle/Resources/views/Salle/form_recherche.html.twig
+++ b/src/EasyRoom/AppBundle/Resources/views/Salle/form_recherche.html.twig
@@ -10,16 +10,16 @@
       <label for="date_debut">Date début</label>
     </div>
     <div class="input-field col m2">
-      <input id="heure_debut" type="time" class="timepicker">
       <label for="heure_debut">Heure début</label>
+      <input id="heure_debut" class="timepicker" type="time">
     </div>
     <div class="input-field col m3">
       <input id="date_fin" type="date" class="datepicker">
       <label for="date_fin">Date fin</label>
     </div>
     <div class="input-field col m2">
-      <input id="heure_fin" type="time" class="timepicker">
       <label for="heure_fin">Heure fin</label>
+      <input id="heure_fin" class="timepicker" type="time">
     </div>
     <div class="submit col s12 center-align">
       <button class="btn waves-effect waves-light" type="submit" name="action">Rechercher</button>
