--- a/src/EasyRoom/AppBundle/Resources/views/Salle/creation.html.twig
+++ b/src/EasyRoom/AppBundle/Resources/views/Salle/creation.html.twig
@@ -14,40 +14,48 @@ du menu déroulant pour l'onglet profil du menu #}
 	<li><a href="#!" class="blue-text text-lighten-1">Déconnexion</a>
 	</li>
 </ul>
-{% endblock %}
+{% endblock %} {% block navbar %}
+<div class="navbar-fixed">
+	<ul id="dropdown1" class="dropdown-content">
+		<li><a href="#!">Mon profil</a></li>
+		<li class="divider"></li>
+		<li><a href="{{ path('easy_room_app_login_index') }}">Se
+				déconnecter</a></li>
+	</ul>
+	<ul id="dropdown2" class="dropdown-content">
+		<li><a href="#!">Creation</a></li>
+		<li class="divider"></li>
+		<li><a href="#!">Recherche</a></li>
+	</ul>
+	<nav class="white" role="navigation nav-wrapper">
+		<div class="container">
+			<a id="logo-container" href="#" class="brand-logo"><img
+				src="{{ asset('bundles/easyroomapp/dist/images/logo-menu.png') }}"
+				alt="Logo Easyroom"></a>
+			<ul class="right hide-on-med-and-down">
+				<li><a href="{{ path('easy_room_app_accueil_index') }}">Accueil</a></li>
+				<li class="active" ><a class="dropdown-button" href="#" data-activates='dropdown2'>Salles</a></li>
+				<li><a href="#">Mes réservations</a></li>
+				<!-- Dropdown Trigger -->
+				<li><a class="dropdown-button" href="#!" data-activates="dropdown1"><i class="material-icons">person_pin</i></a></li>
+			</ul>
 
-{% block navbar %}
-    <div class="navbar-fixed">
-        <ul id="dropdown1" class="dropdown-content">
-            <li><a href="#!">Mon profil</a></li>
-            <li class="divider"></li>
-            <li><a href="{{ path('easy_room_app_login_index') }}">Se déconnecter</a></li>
-        </ul>
-        <nav class="white" role="navigation nav-wrapper">
-            <div class="container">
-                <a id="logo-container" href="#" class="brand-logo"><img src="{{ asset('bundles/easyroomapp/dist/images/logo-menu.png') }}" alt="Logo Easyroom"></a>
-                <ul class="right hide-on-med-and-down">
-                    <li ><a href="{{ path('easy_room_app_accueil_index') }}">Accueil</a></li>
-                    <li class="active"><a href="{{ path('easy_room_app_salle_creation') }}">Salles</a></li>
-                    <li><a href="#">Mes réservations</a></li>
-                    <!-- Dropdown Trigger -->
-                    <li><a class="dropdown-button" href="#!" data-activates="dropdown1"><i class="material-icons">person_pin</i></a></li>
-                </ul>
-
-                <ul id="nav-mobile" class="side-nav">
-                    <li class="active"><a href="{{ path('easy_room_app_accueil_index') }}">Accueil</a></li>
-                    <li><a href="{{ path('easy_room_app_salle_creation') }}">Salles</a></li>
-                    <li><a href="#">Mes réservations</a></li>
-                    <li><a href="#!">Mon profil</a></li>
-                    <li class="divider"></li>
-                    <li><a href="{{ path('easy_room_app_login_index') }}">Se déconnecter</a></li>
-                </ul>
-                <a href="#" data-activates="nav-mobile" class="blue-text button-collapse"><i class="material-icons">menu</i></a>
-            </div>
-        </nav>
-    </div>
-{% endblock %} 
-{# Contenu du block navbar #} {% block main %} {#
+			<ul id="nav-mobile" class="side-nav">
+				<li class="active"><a
+					href="{{ path('easy_room_app_accueil_index') }}">Accueil</a></li>
+				<li><a href="{{ path('easy_room_app_salle_creation') }}">Salles</a></li>
+				<li><a href="#">Mes réservations</a></li>
+				<li><a href="#!">Mon profil</a></li>
+				<li class="divider"></li>
+				<li><a href="{{ path('easy_room_app_login_index') }}">Se
+						déconnecter</a></li>
+			</ul>
+			<a href="#" data-activates="nav-mobile"
+				class="blue-text button-collapse"><i class="material-icons">menu</i></a>
+		</div>
+	</nav>
+</div>
+{% endblock %} {# Contenu du block navbar #} {% block main %} {#
 (Contenu obligatoire) ici doit être ajouté le contenu de l'écran #}
 <section id="salle-section-description" class="valign-wrapper">
 	<div class="valign white lighten-1 container"
@@ -70,7 +78,7 @@ du menu déroulant pour l'onglet profil du menu #}
 				</div>
 				<div class="input-field col s6">
 					<img class="materialboxed" width="300"
-						src="{{ asset('bundles/easyroomapp/images/card_salle_manathan.jpg') }}"></img>
+						src="{{ asset('bundles/easyroomapp/dist/images/card_salle_manathan.jpg') }}"></img>
 					<a class="btn-floating blue"><i class="material-icons">attach_file</i></a>
 				</div>
 			</div>
@@ -82,8 +90,8 @@ du menu déroulant pour l'onglet profil du menu #}
 					<label for="disposition-rectangle">Disposition Rectangle</label>
 				</div>
 				<div class="input-field col s3">
-					<input id="effectif-rectangle" type="number" class="validate">
-					<label for="effectif-rectangle">Effectif</label>
+					<input id="effectif-rectangle" type="number" class="validate"
+						min="0" max="500"> <label for="effectif-rectangle">Effectif</label>
 				</div>
 				</p>
 				<p>
@@ -92,8 +100,8 @@ du menu déroulant pour l'onglet profil du menu #}
 						for="disposition-salle">Disposition Salle de classe</label>
 				</div>
 				<div class="input-field col s3">
-					<input id="effectif-salle" type="number" class="validate">
-					<label for="effectif-salle">Effectif</label>
+					<input id="effectif-salle" type="number" class="validate" min="0"
+						max="500"> <label for="effectif-salle">Effectif</label>
 				</div>
 				</p>
 				<p>
@@ -102,8 +110,8 @@ du menu déroulant pour l'onglet profil du menu #}
 					<label for="disposition-conference">Disposition Conférence</label>
 				</div>
 				<div class="input-field col s3">
-					<input id="effectif-conference" type="number" class="validate">
-					<label for="effectif-conference">Effectif</label>
+					<input id="effectif-conference" type="number" class="validate"
+						min="0" max="500"> <label for="effectif-conference">Effectif</label>
 				</div>
 				</p>
 				<p>
@@ -112,8 +120,8 @@ du menu déroulant pour l'onglet profil du menu #}
 						for="disposition-vide">Disposition Vide</label>
 				</div>
 				<div class="input-field col s3">
-					<input id="effectif-vide" type="number" class="validate"> <label
-						for="effectif-vide">Effectif</label>
+					<input id="effectif-vide" type="number" class="validate" min="0"
+						max="500"> <label for="effectif-vide">Effectif</label>
 				</div>
 		</div>
 		</p>
@@ -130,19 +138,23 @@ du menu déroulant pour l'onglet profil du menu #}
 				<div class="col s12 m4 l4">
 					<p>
 						<input type="checkbox" id="lumiere-salle" /> <label
-							for="lumiere-salle">Lumière du jour</label>
+							for="lumiere-salle"><i class="material-icons">wb_sunny</i>Lumière
+							du jour</label>
 					</p>
 				</div>
 				<div class="col s12 m4 l4">
 					<p>
+
 						<input type="checkbox" id="handicap-salle" /> <label
-							for="handicap-salle">Accès handicapé</label>
+							for="handicap-salle"><i class="material-icons">accessible</i>Accès
+							handicapé</label>
 					</p>
 				</div>
 			</div>
 		</form>
-		<div class="input-field col s12">
-			<input type="submit" value="Valider">
+		<div class="submit col s12 center-align">
+			<button class="btn waves-effect waves-light" type="submit"
+				name="action">Valider</button>
 		</div>
 	</div>
 	</div>
