--- a/src/EasyRoom/AppBundle/Resources/views/template_parent.html.twig
+++ b/src/EasyRoom/AppBundle/Resources/views/template_parent.html.twig
@@ -36,6 +36,7 @@ and open the template in the editor.
         <script type="text/javascript" src="{{ asset('bundles/easyroomapp/dist/js/jquery-3.1.1.min.js') }}"></script>
         <!-- Compiled and minified JavaScript -->
         <script src="{{ asset('bundles/easyroomapp/dist/js/materialize.min.js') }}"></script>
+        <script src="{{ asset('bundles/easyroomapp/dist/js/menu.js') }}"></script>
         {% block javascript %}{% endblock %}
     </body>
 </html>
