--- a/src/EasyRoom/AppBundle/Resources/views/Reservation/carte_invitation.html.twig
+++ b/src/EasyRoom/AppBundle/Resources/views/Reservation/carte_invitation.html.twig
@@ -3,9 +3,13 @@
     <div class="card-stacked">
       <div class="card-content row">
         <div class="card-description col s6">
-          <h4>Salle hipster</h4>
-          <p>I am a very simple card. I am good at containing small bits of information.</p>
-          <p class="bottom"><i class="material-icons">date_range</i>20/04/2017 15:30</p>
+          <div class="row">
+            <h4>Salle hipster</h4>
+            <p>I am a very simple card. I am good at containing small bits of information.</p>
+          </div>
+          <div class="row">
+            <p class="bottom"><i class="material-icons">date_range</i>20/04/2017 15:30</p>
+          </div>
         </div>
         <div class="col s6 card-image">
           <img src="{{ asset('bundles/easyroomapp/dist/images/card_salle_hipster.jpg') }}">
@@ -22,10 +26,15 @@
     <div class="card-stacked">
       <div class="card-content row">
         <div class="card-description col s6">
+          <div class="row">
           <h4>Salle hipster</h4>
           <p>I am a very simple card. I am good at containing small bits of information.</p>
-          <p class="bottom"><i class="material-icons">date_range</i>20/04/2017 15:30</p>
+          </div>
+          <div class="row">
+            <p class="bottom"><i class="material-icons">date_range</i>20/04/2017 15:30</p>
+          </div>
         </div>
+
         <div class="col s6 card-image">
           <img src="{{ asset('bundles/easyroomapp/dist/images/card_salle_hipster.jpg') }}">
         </div>
