--- a/src/EasyRoom/AppBundle/Resources/views/Reservation/carte_ma_reservation.html.twig
+++ b/src/EasyRoom/AppBundle/Resources/views/Reservation/carte_ma_reservation.html.twig
@@ -3,9 +3,13 @@
     <div class="card-stacked">
       <div class="card-content row">
         <div class="card-description col s6">
-          <h4>{{ reservation.salle.libelle }}</h4>
-          <p>{{ reservation.salle.description[:70]~'...' }}</p>
-          <p class="bottom"><i class="material-icons">date_range</i>20/04/2017 15:30</p>
+          <div class="row">
+            <h4>{{ reservation.salle.libelle }}</h4>
+            <p>{{ reservation.salle.description[:70]~'...' }}</p>
+          </div>
+          <div class="row">
+            <p class="bottom"><i class="material-icons">date_range</i>20/04/2017 15:30</p>
+          </div>
         </div>
         <div class="col s6 card-image">
           <img src="{{ asset('bundles/easyroomapp/dist/images/card_salle_hipster.jpg') }}">
