--- a/src/EasyRoom/AppBundle/Resources/views/Salle/carte_resultat.html.twig
+++ b/src/EasyRoom/AppBundle/Resources/views/Salle/carte_resultat.html.twig
@@ -3,16 +3,20 @@
     <div class="card-stacked">
       <div class="card-content row">
         <div class="card-description col s6">
-          <h4>Salle hipster</h4>
-          <p>I am a very simple card. I am good at containing small bits of information.</p>
-          <p class="bottom"><i class="material-icons">date_range</i>20/04/2017 15:30</p>
+          <div class="row">
+            <h4>Salle hipster</h4>
+            <p>I am a very simple card. I am good at containing small bits of information.</p>
+          </div>
+          <div class="row">
+            <p class="bottom"><i class="material-icons">date_range</i>20/04/2017 15:30</p>
+          </div>
         </div>
         <div class="col s6 card-image">
           <img src="{{ asset('bundles/easyroomapp/dist/images/card_salle_hipster.jpg') }}">
         </div>
       </div>
       <div class="card-action">
-        <a class="learn-more-link" href="#">En savoir +</a>
+        <a class="learn-more-link" href="{{ path('easy_room_app_salle_index') }}">En savoir +</a>
         <a class="book-link" href="#">Réserver</a>
       </div>
     </div>
@@ -23,16 +27,20 @@
     <div class="card-stacked">
       <div class="card-content row">
         <div class="card-description col s6">
-          <h4>Salle hipster</h4>
-          <p>I am a very simple card. I am good at containing small bits of information.</p>
-          <p class="bottom"><i class="material-icons">date_range</i>20/04/2017 15:30</p>
+          <div class="row">
+            <h4>Salle hipster</h4>
+            <p>I am a very simple card. I am good at containing small bits of information.</p>
+          </div>
+          <div class="row">
+            <p class="bottom"><i class="material-icons">date_range</i>20/04/2017 15:30</p>
+          </div>
         </div>
         <div class="col s6 card-image">
           <img src="{{ asset('bundles/easyroomapp/dist/images/card_salle_hipster.jpg') }}">
         </div>
       </div>
       <div class="card-action">
-        <a class="learn-more-link" href="#">En savoir +</a>
+        <a class="learn-more-link" href="{{ path('easy_room_app_salle_index') }}">En savoir +</a>
         <a class="book-link" href="#">Réserver</a>
       </div>
     </div>
@@ -43,16 +51,20 @@
     <div class="card-stacked">
       <div class="card-content row">
         <div class="card-description col s6">
-          <h4>Salle hipster</h4>
-          <p>I am a very simple card. I am good at containing small bits of information.</p>
-          <p class="bottom"><i class="material-icons">date_range</i>20/04/2017 15:30</p>
+          <div class="row">
+            <h4>Salle hipster</h4>
+            <p>I am a very simple card. I am good at containing small bits of information.</p>
+          </div>
+          <div class="row">
+            <p class="bottom"><i class="material-icons">date_range</i>20/04/2017 15:30</p>
+          </div>
         </div>
         <div class="col s6 card-image">
           <img src="{{ asset('bundles/easyroomapp/dist/images/card_salle_hipster.jpg') }}">
         </div>
       </div>
       <div class="card-action">
-        <a class="learn-more-link" href="#">En savoir +</a>
+        <a class="learn-more-link" href="{{ path('easy_room_app_salle_index') }}">En savoir +</a>
         <a class="book-link" href="#">Réserver</a>
       </div>
     </div>
