--- a/src/EasyRoom/AppBundle/Resources/views/Salle/search_salle.html.twig
+++ b/src/EasyRoom/AppBundle/Resources/views/Salle/search_salle.html.twig
@@ -15,10 +15,10 @@
         </ul>
         <nav class="white" role="navigation nav-wrapper">
             <div class="container">
-                <a id="logo-container" href="#" class="brand-logo"><img src="{{ asset('bundles/easyroomapp/dist/images/logo-menu.png') }}" alt="Logo Easyroom"></a>
+                <a id="logo-container" href="{{ path('easy_room_app_accueil_index') }}" class="brand-logo"><img src="{{ asset('bundles/easyroomapp/dist/images/logo-menu.png') }}" alt="Logo Easyroom"></a>
                 <ul class="right hide-on-med-and-down">
                     <li><a href="{{ path('easy_room_app_accueil_index') }}">Accueil</a></li>
-                    <li class="active"><a href="{{ path('easy_room_app_salle_index') }}">Salles</a></li>
+                    <li class="active"><a href="{{ path('easy_room_app_salle_search') }}">Salles</a></li>
                     <li><a href="#">Mes réservations</a></li>
                     <!-- Dropdown Trigger -->
                     <li><a class="dropdown-button" href="#!" data-activates="dropdown1"><i class="material-icons">person_pin</i></a></li>
@@ -26,7 +26,7 @@
 
                 <ul id="nav-mobile" class="side-nav">
                     <li><a href="{{ path('easy_room_app_accueil_index') }}">Accueil</a></li>
-                    <li class="active"><a href="{{ path('easy_room_app_salle_index') }}">Salles</a></li>
+                    <li class="active"><a href="{{ path('easy_room_app_salle_search') }}}">Salles</a></li>
                     <li><a href="#">Mes réservations</a></li>
                     <li><a href="#!">Mon profil</a></li>
                     <li class="divider"></li>
@@ -42,13 +42,13 @@
 {% block main %}
     <section class="row recherche valign-wrapper">
         <div class="container">
-            {% include 'EasyRoomAppBundle:Reservation:form_recherche.html.twig' %}
+            {% include 'EasyRoomAppBundle:Salle:form_recherche.html.twig' %}
         </div>
     </section>
 
     <section class="section row resultats-recherche">
         <div class="container">
-            <h3 class="col s12 header center-align">Résultat de votre recherche</h3>
+            <h3 class="col s12 header center-align">Résultats de votre recherche</h3>
             {% include 'EasyRoomAppBundle:Salle:carte_resultat.html.twig' %}
         </div>
     </section>
@@ -56,5 +56,6 @@
 
 {# Contenu du block navbar #}
 {% block javascript %}
-    <script src="{{ asset('bundles/easyroomapp/dist/js/accueil.js') }}"></script>
+    <script src="{{ asset('bundles/easyroomapp/dist/js/materialize.clockpicker.js') }}"></script>
+    <script src="{{ asset('bundles/easyroomapp/dist/js/recherche_salle.js') }}"></script>
 {% endblock %}
