--- a/src/EasyRoom/AppBundle/Resources/views/Salle/search_salle.html.twig
+++ b/src/EasyRoom/AppBundle/Resources/views/Salle/search_salle.html.twig
@@ -38,11 +38,11 @@
     </div>
 {% endblock %}
 
-{# Contenu du block navbar #}
+{# Contenu du block main #}
 {% block main %}
     <section class="row recherche valign-wrapper">
         <div class="container">
-            {% include 'EasyRoomAppBundle:Reservation:form_recherche.html.twig' %}
+            {% include 'EasyRoomAppBundle:Salle:form_recherche.html.twig' %}
         </div>
     </section>
 
