--- a/src/EasyRoom/AppBundle/Resources/views/nomvue.html.twig
+++ b/src/EasyRoom/AppBundle/Resources/views/nomvue.html.twig
@@ -15,7 +15,7 @@
     {# (Contenu obligatoire) ici doit être ajouté le contenu du menu identique pour tous les écran sauf pour la page de login #}
 {% endblock %}
 
-{# Contenu du block navbar #}
+{# Contenu du block main #}
 {% block main %}
     {# (Contenu obligatoire) ici doit être ajouté le contenu de l'écran #}
 {% endblock %}
