--- a/src/EasyRoom/AppBundle/Resources/views/Salle/form_recherche.html.twig
+++ b/src/EasyRoom/AppBundle/Resources/views/Salle/form_recherche.html.twig
@@ -1,25 +1,25 @@
-<form class="col s12" style="padding: 0.1rem 2.75rem" action="{{ path('easy_room_app_salle_search') }}">
+<form class="col s12" style="padding: 0.1rem 2.75rem" action="{{ path('easy_room_app_salle_search') }}" method="post">
   <div class="row">
     <h3>Réservez une salle</h3>
     <div class="input-field col m2">
-      <input id="effectif" type="number" class="validate">
+      <input id="effectif" type="number" class="validate" name="effectif">
       <label for="effectif">Effectif</label>
     </div>
     <div class="input-field col m3">
-      <input id="date_debut" type="date" class="datepicker">
+      <input id="date_debut" type="date" class="datepicker" name="date_debut" required>
       <label for="date_debut">Date début</label>
     </div>
     <div class="input-field col m2">
       <label for="heure_debut">Heure début</label>
-      <input id="heure_debut" class="timepicker" type="time">
+      <input id="heure_debut" class="timepicker" type="time" name="heure_debut" required>
     </div>
     <div class="input-field col m3">
-      <input id="date_fin" type="date" class="datepicker">
+      <input id="date_fin" type="date" class="datepicker" name="date_fin" required>
       <label for="date_fin">Date fin</label>
     </div>
     <div class="input-field col m2">
       <label for="heure_fin">Heure fin</label>
-      <input id="heure_fin" class="timepicker" type="time">
+      <input id="heure_fin" class="timepicker" type="time" name="heure_fin" required>
     </div>
     <div class="submit col s12 center-align">
       <button class="btn waves-effect waves-light" type="submit" name="action">Rechercher</button>
