--- a/src/EasyRoom/AppBundle/Resources/views/Salle/form_recherche.html.twig
+++ b/src/EasyRoom/AppBundle/Resources/views/Salle/form_recherche.html.twig
@@ -6,20 +6,20 @@
       <label for="effectif">Effectif</label>
     </div>
     <div class="input-field col m3">
-      <input id="date_debut" type="date" class="datepicker" name="date_debut" required>
+      <input id="date_debut" type="date" class="datepicker" name="date_debut">
       <label for="date_debut">Date début</label>
     </div>
     <div class="input-field col m2">
       <label for="heure_debut">Heure début</label>
-      <input id="heure_debut" class="timepicker" type="time" name="heure_debut" required>
+      <input id="heure_debut" class="timepicker" type="time" name="heure_debut">
     </div>
     <div class="input-field col m3">
-      <input id="date_fin" type="date" class="datepicker" name="date_fin" required>
+      <input id="date_fin" type="date" class="datepicker" name="date_fin">
       <label for="date_fin">Date fin</label>
     </div>
     <div class="input-field col m2">
       <label for="heure_fin">Heure fin</label>
-      <input id="heure_fin" class="timepicker" type="time" name="heure_fin" required>
+      <input id="heure_fin" class="timepicker" type="time" name="heure_fin">
     </div>
     <div class="submit col s12 center-align">
       <button class="btn waves-effect waves-light" type="submit" name="action">Rechercher</button>
