Recherche de salle : vue dynamique du résultat

--- a/src/EasyRoom/AppBundle/Resources/public/sass/accueil.scss
+++ b/src/EasyRoom/AppBundle/Resources/public/sass/accueil.scss
@@ -37,7 +37,7 @@ section.mes-reservations, section.join-meeting {
       .material-icons {color: $blue-easyroom;}
     }
     .bottom {
-      .material-icons {color: $soft-black; position:relative; top:5px;right:5px;}
+      .material-icons {color: $blue-easyroom; position:relative; top:5px;right:5px;}
       .lib-date{
           display: inline-block;
           width: 50px;
