--- a/src/EasyRoom/AppBundle/Resources/views/Salle/fiche.html.twig
+++ b/src/EasyRoom/AppBundle/Resources/views/Salle/fiche.html.twig
@@ -50,8 +50,30 @@
 		</div>
 	</section>
 
-	<section class="capacites-caracteristiques"></section>
-	<section></section>
+	<section class="capacites-caracteristiques row container">
+        <div class="col s6 capacites">
+            <h5>Capacités</h5>
+            <ul>
+                <li>Table rectangulaire : <span class="bold">20</span></li><br/>
+                <li>Salle de classe : <span class="bold">20</span></li><br/>
+                <li>Conférence : <span class="bold">20</span></li><br/>
+                <li>Vide : <span class="bold">20</span></li>
+            </ul>
+        </div>
+        <div class="col s6 caracteristiques">
+            <h5>Caractéristiques</h5>
+            <ul>
+                <li><i class="material-icons">accessible</i> Accessible</li><br/>
+                <li><i class="material-icons">wb_sunny</i> Ensoleillé</li><br/>
+            </ul>
+        </div>
+    </section>
+    <section class="equipement row container">
+        <h5>Équipement</h5>
+        <ul>
+            <li><i class="material-icons">music_note</i> Chaîne Hi-Fi</li>
+        </ul>
+    </section>
 
 
 {% endblock %}
