--- a/src/EasyRoom/AppBundle/Resources/public/sass/detail_salle.scss
+++ b/src/EasyRoom/AppBundle/Resources/public/sass/detail_salle.scss
@@ -40,6 +40,40 @@
   }
 }
 
+section.description-resa {
+  max-height:300px;
+}
+
+section.capacites-caracteristiques, section.equipement {
+  padding:1em;
+  h5 {color:$blue-easyroom;font-size:1em;margin:0}
+  background:$light-grey;
+}
+
+div.col.capacites {
+  border-right: 1px solid lighten($soft-black, 40%);
+  ul {
+    li {display:inline-block}
+    text-align:right;
+    list-style-type:none;
+    display:inline-block;
+    padding-left: 50px;
+  }
+}
+
+div.col.caracteristiques {
+  padding-left: 40px;
+  i {color: $blue-easyroom; position:relative; top:5px; left: -2px;}
+}
+
+section.equipement {
+  margin-top:50px;
+  i {color: $blue-easyroom; position:relative; top:5px; left: -2px;}
+  padding:2em;
+  ul {
+    padding-left: 40px;}
+}
+
 .btn, .btn-large {
   text-decoration: none;
   color: $white;
