--- a/src/EasyRoom/AppBundle/Resources/views/Salle/creation.html.twig
+++ b/src/EasyRoom/AppBundle/Resources/views/Salle/creation.html.twig
@@ -4,58 +4,13 @@ ici doit être ajouté seulement des balises
 <link>
 pour faire appel à des fichiers css spécifiques à la vue #}
 <link type="text/css" rel="stylesheet"
-	href="{{ asset('bundles/easyroomapp/css/Salle/s_style.css') }}" />
+	href="{{ asset('bundles/easyroomapp/css/Salle/salle_style.css') }}" />
 {% endblock %} {# Contenu du block navbar_profil #} {% block
 navbar_profil %} {# (Contenu optionnel) ici doit être ajoutéle contenu
 du menu déroulant pour l'onglet profil du menu #}
-<ul id="dropdown1" class="dropdown-content">
-	<li><a href="#!" class="blue-text text-lighten-1">Mon compte</a></li>
-	<li class="divider blue-text text-lighten-1"></li>
-	<li><a href="#!" class="blue-text text-lighten-1">Déconnexion</a>
-	</li>
-</ul>
-{% endblock %} {% block navbar %}
-<div class="navbar-fixed">
-	<ul id="dropdown1" class="dropdown-content">
-		<li><a href="#!">Mon profil</a></li>
-		<li class="divider"></li>
-		<li><a href="{{ path('easy_room_app_login_index') }}">Se
-				déconnecter</a></li>
-	</ul>
-	<ul id="dropdown2" class="dropdown-content">
-		<li><a href="#!">Creation</a></li>
-		<li class="divider"></li>
-		<li><a href="#!">Recherche</a></li>
-	</ul>
-	<nav class="white" role="navigation nav-wrapper">
-		<div class="container">
-			<a id="logo-container" href="#" class="brand-logo"><img
-				src="{{ asset('bundles/easyroomapp/dist/images/logo-menu.png') }}"
-				alt="Logo Easyroom"></a>
-			<ul class="right hide-on-med-and-down">
-				<li><a href="{{ path('easy_room_app_accueil_index') }}">Accueil</a></li>
-				<li class="active" ><a class="dropdown-button" href="#" data-activates='dropdown2'>Salles</a></li>
-				<li><a href="#">Mes réservations</a></li>
-				<!-- Dropdown Trigger -->
-				<li><a class="dropdown-button" href="#!" data-activates="dropdown1"><i class="material-icons">person_pin</i></a></li>
-			</ul>
 
-			<ul id="nav-mobile" class="side-nav">
-				<li class="active"><a
-					href="{{ path('easy_room_app_accueil_index') }}">Accueil</a></li>
-				<li><a href="{{ path('easy_room_app_salle_creation') }}">Salles</a></li>
-				<li><a href="#">Mes réservations</a></li>
-				<li><a href="#!">Mon profil</a></li>
-				<li class="divider"></li>
-				<li><a href="{{ path('easy_room_app_login_index') }}">Se
-						déconnecter</a></li>
-			</ul>
-			<a href="#" data-activates="nav-mobile"
-				class="blue-text button-collapse"><i class="material-icons">menu</i></a>
-		</div>
-	</nav>
-</div>
-{% endblock %} {# Contenu du block navbar #} {% block main %} {#
+{% endblock %}
+{% block main %} {#
 (Contenu obligatoire) ici doit être ajouté le contenu de l'écran #}
 <section id="salle-section-description" class="valign-wrapper">
 	<div class="valign white lighten-1 container"
