--- a/src/EasyRoom/AppBundle/Resources/views/Salle/carte_resultat.html.twig
+++ b/src/EasyRoom/AppBundle/Resources/views/Salle/carte_resultat.html.twig
@@ -9,7 +9,7 @@
           </div>
           <div class="row">
             <p class="bottom">
-                <i class="material-icons">people_outline</i>30
+                <i class="material-icons">people_outline</i>{{ salle.DispositionParDefaut.nbPlace }}
             </p>
           </div>
         </div>
